update DPS calculation for new UI